--- a/index.html
+++ b/index.html
@@ -695,13 +695,13 @@
     <div class="container">
         <div class="header">
             <h1>📅 מערכת לוז דיגיטלית - בית דרור🏳️‍🌈</h1>
-            <p>אנה תמלאו את הלוז השבועי שלכם פעם אחת ותלחצו"שלח לאישור" מקווים שיהיה לכם שבוע מצוין😁😄</p>
+            <p>אנא תמלאו את הלוז השבועי שלכם פעם אחת ותלחצו "שלח לאישור" מקווים שיהיה לכם שבוע מצוין😁😄</p>
         </div>
 
         <div class="tabs">
-            <button class="tab active" onclick="switchTab('student')">נער</button>
-            <button class="tab" onclick="switchTab('coordinator')">רכזת חינוכית</button>
-            <button class="tab" onclick="switchTab('combined')">לוז כולל</button>
+            <button class="tab active" onclick="switchTab('student')">נער/ה</button>
+            <button class="tab" onclick="switchTab('coordinator')">🔒רכזת חינוכית</button>
+            <button class="tab" onclick="switchTab('combined')">🔒לוז כולל</button>
             <button class="tab" onclick="switchTab('editor')">⚙️ עריכת לוז</button>
         </div>
 
