--- a/index.html
+++ b/index.html
@@ -699,10 +699,10 @@
         </div>
 
         <div class="tabs">
-            <button class="tab active" onclick="switchTab('student')">נער/ה</button>
-            <button class="tab" onclick="switchTab('coordinator')">🔒רכזת חינוכית</button>
-            <button class="tab" onclick="switchTab('combined')">🔒לוז כולל</button>
-            <button class="tab" onclick="switchTab('editor')">⚙️ עריכת לוז</button>
+            <button class="tab active" onclick="switchTab('student')">נערימ.ות</button>
+            <button class="tab" onclick="switchTab('coordinator')">רכזת חינוכית🔒</button>
+            <button class="tab" onclick="switchTab('combined')">לוז כולל🔒</button>
+            <button class="tab" onclick="switchTab('editor')">עריכת לוז⚙️</button>
         </div>
 
         <!-- TAB 1: Student View -->
@@ -760,7 +760,7 @@
                     <div class="legend-items">
                         <div class="legend-item">
                             <div class="legend-box" style="background: var(--warning-bg); border-color: var(--warning);"></div>
-                            <span>חפיפה - יותר מנער אחד באותה שעה</span>
+                            <span>חפיפה - יותר מנער/ה אחד באותה שעה</span>
                         </div>
                         <div class="legend-item">
                             <div class="legend-box" style="background: var(--bg-fixed);"></div>
@@ -846,7 +846,7 @@
                 
                 <div class="form-group">
                     <label>תוכן הפעילות</label>
-                    <input type="text" id="addEntryContent" placeholder="מה הנער יעשה?">
+                    <input type="text" id="addEntryContent" placeholder="מה הנער/ה יעשו?">
                 </div>
 
                 <div class="modal-footer">
@@ -1784,7 +1784,7 @@
                             </div>
                         ` : timeSlot.type === 'suggested' ? `
                             <div class="form-group">
-                                <label>טקסט הנחיה (מה הנער אמור לכתוב)</label>
+                                <label>טקסט הנחיה (מה הנער/ה אמורים לכתוב)</label>
                                 <input type="text" value="${timeSlot.content || ''}" 
                                        onchange="updateTimeSlot(${index}, 'content', this.value)"
                                        placeholder="לדוגמה: לימודים / פעילות בוקר"
