--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
         // DEFAULT SCHEDULE STRUCTURE
         // ==============================================
         const defaultScheduleStructure = {
-            days: ['ראשון', 'שני', 'שלישי יום בית🛋️', 'רביעי', 'חמישי', 'שישי', 'שבת'],
+            days: ['ראשון', 'שני', 'שלישי יום בית🛋️', 'רביעי', 'חמישי', 'שישי🌞', 'שבת'],
             times: [
                 { time: '06:30', type: 'free' },
                 { time: '07:00', type: 'fixed', content: 'א.בוקר - Breakfast', days: [2] },
