--- a/index.html
+++ b/index.html
@@ -699,14 +699,14 @@
     <div class="container">
         <div class="header">
             <h1>📅 מערכת לוז דיגיטלית - בית דרור🏳️‍🌈</h1>
-            <p>מילוי ואישור לוזים שבועיים</p>
+            <p>אנא תמלאו את הלוז השבועי שלכם פעם אחת ותלחצו"שלח לאישור" מקווים שיהיה לכם שבוע מצוין😊</p>
         </div>
 
         <div class="tabs">
             <button class="tab active" onclick="switchTab('student')">נער</button>
             <button class="tab" onclick="switchTab('coordinator')">רכזת חינוכית🔒</button>
             <button class="tab" onclick="switchTab('combined')">לוז כולל🔒</button>
-            <button class="tab" onclick="switchTab('editor')">⚙️🔒 עריכת לוז</button>
+            <button class="tab" onclick="switchTab('editor')">עריכת לוז⚙️🔒</button>
         </div>
 
         <!-- TAB 1: Student View -->
