--- a/index.html
+++ b/index.html
@@ -2568,10 +2568,10 @@
                 }
 
                 // בניית הודעה מעוצבת עם "אימוג'ים" מתווי מקלדת
-                let message = `━━━━━━━━━━━━━━━━\n`;
+                let message = `━━━━━━━━━━━━━━\n`;
                 message += `   לוז של ${studentName}\n`;
                 message += `   ${week}\n`;
-                message += `━━━━━━━━━━━━━━━━\n\n`;
+                message += `━━━━━━━━━━━━━━\n\n`;
 
                 if (Object.keys(daysMap).length === 0) {
                     message += 'אין פעילויות בלוז';
@@ -2596,7 +2596,7 @@
                     });
                 }
 
-                message += `━━━━━━━━━━━━━━━━\n`;
+                message += `━━━━━━━━━━━━━━━\n`;
                 message += 'שבוע מעולה! (:';
 
                 // קידוד מלא ונכון של המסר כולל תווי RTL והטקסט בעברית
