--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
 
     <div class="container">
         <div class="header">
-            <h1>📅 מערכת לוז בית דרור - النظام الرقمي للّوز🏳️‍🌈</h1>
+            <h1>📅 מערכת לוז בית דרור - نظام جدول مواعيد رقمي🏳️‍🌈</h1>
             <p>אנא תמלאו את הלוז השבועי שלכם פעם אחת ותלחצו "שלח לאישור" מקווים שיהיה לכם שבוע מצוין🙂</p>
             <p class="arabic-text">الرجاء ملء الجدول الأسبوعي مرة واحدة والنقر على "إرسال للموافقة" نتمنى لكم أسبوعاً رائعاً🙂</p>
         </div>
